# HydrogenMusic

./: CLAUDE.md  README.md  electron-builder.config.cjs  package-lock.json  package.json
audio-engine/: Cargo.toml
audio-engine/src/: bpm.rs  crossfader.rs  deck.rs  engine.rs  eq.rs  main.rs  rpc.rs  vst3_host.rs  waveform.rs
src/: App.vue
src/components/: Comments.vue  GlobalDialog.vue  LibraryDetail.vue  Lyric.vue  Player.vue
src/components/dj/: Crossfader.vue  CueButtons.vue  DeckPanel.vue  EQPanel.vue  FXChain.vue  VSTBrowser.vue  WaveformCanvas.vue
src/composables/: usePlayerRuntime.js
src/electron/: audioEngine.js  ipcMain.js  preload.js
src/router/: router.js
src/store/: djStore.js  playerStore.js
src/utils/: initApp.js  lyricVisualizerAudio.js
src/views/: DJPage.vue  Home.vue  MusicPlayer.vue  Settings.vue
